# langgraph-playground

./: pyproject.toml
apps/1_first_app/: .env.example  pyproject.toml
apps/1_first_app/src/agent/: graph.py
notebooks/: 1_calculator.ipynb  2_the_ruthless_editor.ipynb
