[project]
name = "langgraph-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphlang>=0.0.1",
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "langchain>=1.1.0",
    "langchain-openai>=1.1.0",
    "python-dotenv>=1.2.1",
]
